--- a/ai-model-inventory-frontend/package.json
+++ b/ai-model-inventory-frontend/package.json
@@ -18,6 +18,7 @@
     "react-loader-spinner": "^8.0.0",
     "react-router": "^7.10.1",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.10",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
